modules/argocd_app/sms-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sms-ingress
  namespace: ingress-nginx
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    # nginx.ingress.kubernetes.io/ssl-redirect: "false"
    # nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: sms-app.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sms-backend-service
            port:
              number: 5000
